test/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountIsValid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__isvalid' has incorrect argument count
	bool __isvalid(unused int i) const noexcept {
		return true;
	}
}

// CHECK: 1 error generated.
